<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.home.baby.AddBabyActivity">

    <ImageView
        android:id="@+id/img_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/womanwithbaby"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_add_baby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_add_baby"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/img_icon"/>

    <LinearLayout
        android:id="@+id/container_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="24dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_baby"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/edt_name_baby"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edttext_grey"
            android:hint="@string/hint_name_baby"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium"/>

        <EditText
            android:id="@+id/etTglLahir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_tgl"
            android:inputType="phone"
            android:background="@drawable/custom_edttext_grey"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:fontFamily="@font/poppins_medium"
            android:focusableInTouchMode="false"
            android:drawableEnd="@drawable/ic_calendar"
            android:layout_marginTop="12dp"
            android:padding="15dp"
            android:textSize="14sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_laki"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_laki"
                android:paddingStart="10dp"
                android:paddingEnd="20dp"
                android:onClick="onRadioButtonClicked"
                android:background="@drawable/bg_radius_top_20dp_white"/>

            <RadioButton
                android:id="@+id/rb_perempuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/bg_radius_top_20dp_white"
                android:text="@string/title_perempuan"
                android:paddingStart="10dp"
                android:onClick="onRadioButtonClicked"
                android:paddingEnd="20dp"/>

        </RadioGroup>


        <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:text="@string/title_add"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:background="@drawable/custom_btn_primary"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>