<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <ImageView
        android:id="@+id/img_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/babycare"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_icon">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_image"/>

        <TextView
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:visibility="gone"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_medium"
            android:layout_gravity="center_horizontal"
            android:text="@string/title_add_photo" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/custom_edttext_grey"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_edttext_grey"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textSize="14sp" />

        <!--            <EditText-->
        <!--                android:id="@+id/edtTelepon"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginTop="20dp"-->
        <!--                android:background="@drawable/custom_edttext_grey"-->
        <!--                android:hint="@string/hint_telepon"-->
        <!--                android:inputType="number"-->
        <!--                android:padding="15dp"-->
        <!--                android:textSize="14sp" />-->

        <RelativeLayout
            android:id="@+id/rlPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edttext_grey"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/iv_password"
                android:layout_width="42dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:paddingStart="5dp"
                android:paddingTop="10dp"
                android:paddingEnd="17dp"
                android:paddingBottom="10dp"
                android:src="@drawable/ic_hide_password"
                android:tag="hidden" />
        </RelativeLayout>

        <Button
            android:id="@+id/btnDaftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/title_register"
            android:textAllCaps="false"
            android:background="@drawable/custom_btn_primary"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_have_account"
                android:fontFamily="@font/poppins"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/title_login"
                android:textColor="@color/primary" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>